# coursework_django

./: .env.template  README.md  pyproject.toml
config/: settings.py  urls.py
mailings/: forms.py  models.py  services.py  urls.py
mailings/management/commands/: bootstrap_managers.py  send_mailing.py
mailings/migrations/: 0001_initial.py  0002_client_owner_mailing_owner.py  0003_backfill_owner.py  0004_alter_client_owner_alter_mailing_owner.py  0005_alter_client_email.py  0006_client_uniq_owner_email.py  0007_alter_attempt_options_alter_client_options_and_more.py  0008_alter_message_options.py
mailings/templates/mailings/: attempt_detail.html  attempt_list.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  stats.html
mailings/views/: __init__.py  attempt.py  client.py  home.py  mailing.py  message.py  stats.py
templates/: base.html
users/: admin.py  forms.py  models.py  tokens.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: activated.html  activation_failed.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  profile_detail.html  profile_form.html  register.html  signup_done.html
